# dialogger-backend

./: pyproject.toml  pytest.ini  requirements.txt
app/: config.py  db.py  main.py  models.py  schemas.py
app/routers/: projects.py  scenes.py  titles.py
app/services/: translate.py
tests/: conftest.py  test_db.py  test_translate.py
