[project]
name = "datalogger"
version = "0.1.0"
description = "Backend API for recording and translating dialogue from works of fiction."
requires-python = ">=3.14"
dependencies = [
    "alembic",
    "fastapi",
    "openai",
    "pydantic",
    "python-dotenv",
    "psycopg[binary]"
    "sqlalchemy",
    "uvicorn[standard]",
]

[tool.ruff]
line-length = 130
select = ["E", "F", "I"]
ignore = []
fix = true
exclude = ["migrations"]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["migrations"]
